dynamix/force-app/main/default/objects/Add_On__c/Add_On__c.object-meta.xml
<CustomObject>
    <label>Add On</label>
    <nameField>
        <label>Addon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add On</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>