dynamix/force-app/main/default/objects/Add_On__c/fields/Breadth__c.field-meta.xml
<CustomField>
    <fullName>Breadth__c</fullName>
    <label>Breadth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>