dynamix/force-app/main/default/objects/Add_On__c/fields/Car_Parking__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Add On</relationshipLabel>
    <relationshipName>Add_On</relationshipName>
    <type>Lookup</type>
</CustomField>