dynamix/force-app/main/default/objects/Add_On__c/fields/No_Of_Unit__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Unit__c</fullName>
    <label>No. Of Unit</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>