dynamix/force-app/main/default/objects/Add_On__c/fields/Parking_GST_Percent__c.field-meta.xml
<CustomField>
    <fullName>Parking_GST_Percent__c</fullName>
    <label>Parking GST Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>