dynamix/force-app/main/default/objects/Add_On__c/fields/Parking_GST_Value__c.field-meta.xml
<CustomField>
    <fullName>Parking_GST_Value__c</fullName>
    <formula>Parking_Value__c  *  Parking_GST_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking GST Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>