dynamix/force-app/main/default/objects/Add_On__c/fields/Parking_Number__c.field-meta.xml
<CustomField>
    <fullName>Parking_Number__c</fullName>
    <label>Parking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>