dynamix/force-app/main/default/objects/Add_On__c/fields/Parking_Value__c.field-meta.xml
<CustomField>
    <fullName>Parking_Value__c</fullName>
    <label>Parking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>