dynamix/force-app/main/default/objects/Add_On__c/fields/Project_Add_On_Charges__c.field-meta.xml
<CustomField>
    <fullName>Project_Add_On_Charges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Add On Charges</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Project_Add_On_Charges__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parking</value>
        </filterItems>
        <filterItems>
            <field>Project_Add_On_Charges__c.Is_Optional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Add_On_Charges__c</referenceTo>
    <relationshipLabel>Add On</relationshipLabel>
    <relationshipName>Add_On</relationshipName>
    <type>Lookup</type>
</CustomField>