dynamix/force-app/main/default/objects/Add_On__c/fields/Suggested_Property__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggested Property</label>
    <referenceTo>Suggested_Property__c</referenceTo>
    <relationshipLabel>Add On</relationshipLabel>
    <relationshipName>Add_On</relationshipName>
    <type>Lookup</type>
</CustomField>